--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="secondBox.css">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,8 +14,7 @@
 <body>
 
 
-  <div id="box">
-
+  <div class="box" id="box1">
     <div id="star-box">
       <img id="star" src="images/icon-star.svg" alt="">
     </div>
@@ -33,13 +33,10 @@
       <button class="number">5</button>
     </div>
    
-  
     <button id="submit">SUBMIT</button>
   </div>
 
-
-
-
+  
 
 
 
